# linux-wallpaperengine

./: CMakeLists.txt  main.cpp
wallpaperengine/: effect.cpp
wallpaperengine/irr/: CPkgReader.cpp  CPkgReader.h
